--- a/Comet.Server/Properties/Resources.resx
+++ b/Comet.Server/Properties/Resources.resx
@@ -282,7 +282,10 @@ SOFTWARE.</value>
   <data name="information" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\information.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="zip" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Images\zip.ico;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="winzip" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\winzip.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="zipE2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\zipe2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
